sandbox/output
StrategyFactory.java:15: error: cannot find symbol
        return new StrategyNormalItem();  
                   ^
  symbol:   class StrategyNormalItem
  location: class StrategyFactory
1 error
